src/tz/snapshots/jiff__tz__zic__tests__parse_zic_man1.snap
---
source: src/tz/zic.rs
expression: zic
---
ZicP {
    rules: {
        "US": [
            RuleP {
                name: RuleNameP {
                    name: "US",
                },
                from: RuleFromP {
                    year: 1967,
                },
                to: Year {
                    year: 2006,
                },
                inn: RuleInP {
                    month: 10,
                },
                on: Last {
                    weekday: Sunday,
                },
                at: RuleAtP {
                    span: SpanFieldwise(
                        2h,
                    ),
                    suffix: None,
                },
                save: RuleSaveP {
                    span: SpanFieldwise(
                        0s,
                    ),
                    suffix: None,
                },
                letters: RuleLettersP {
                    part: "S",
                },
            },
            RuleP {
                name: RuleNameP {
                    name: "US",
                },
                from: RuleFromP {
                    year: 1967,
                },
                to: Year {
                    year: 1973,
                },
                inn: RuleInP {
                    month: 4,
                },
                on: Last {
                    weekday: Sunday,
                },
                at: RuleAtP {
                    span: SpanFieldwise(
                        2h,
                    ),
                    suffix: None,
                },
                save: RuleSaveP {
                    span: SpanFieldwise(
                        1h,
                    ),
                    suffix: None,
                },
                letters: RuleLettersP {
                    part: "D",
                },
            },
        ],
    },
    zones: {
        "America/Menominee": ZoneP {
            first: ZoneFirstP {
                name: ZoneNameP {
                    name: "America/Menominee",
                },
                stdoff: ZoneStdoffP {
                    span: SpanFieldwise(
                        5h ago,
                    ),
                },
                rules: None,
                format: Static {
                    format: "EST",
                },
                until: Some(
                    YearMonthDayTime {
                        year: 1973,
                        month: RuleInP {
                            month: 4,
                        },
                        day: Day {
                            day: 29,
                        },
                        duration: RuleAtP {
                            span: SpanFieldwise(
                                2h,
                            ),
                            suffix: None,
                        },
                    },
                ),
            },
            continuations: [
                ZoneContinuationP {
                    stdoff: ZoneStdoffP {
                        span: SpanFieldwise(
                            6h ago,
                        ),
                    },
                    rules: Named(
                        RuleNameP {
                            name: "US",
                        },
                    ),
                    format: Variable {
                        before: "C",
                        after: "T",
                    },
                    until: None,
                },
            ],
        },
    },
    links: {},
}
